# sc2002lab5

Sc2002Lab5/: Animal.cpp  Animal.h  CMakeLists.txt  Mammal.cpp  Mammal.h  childAnimal.cpp  childAnimal.h  main.cpp
